--- a/config.json
+++ b/config.json
@@ -1,18 +1,13 @@
 {
   "nodes": [
     {
-      "addr": "localhost",
-      "port": 27027,
+      "addr": "172.21.0.11",
+      "port": 27017,
       "credentials": []
     },
     {
-      "addr": "localhost",
-      "port": 27028,
-      "credentials": []
-    },
-    {
-      "addr": "localhost",
-      "port": 27029,
+      "addr": "172.21.0.12",
+      "port": 27017,
       "credentials": []
     }
   ]
